--- a/app/src/main/res/layout/pub_fra_scroller_item.xml
+++ b/app/src/main/res/layout/pub_fra_scroller_item.xml
@@ -6,11 +6,10 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="20dp">
+        android:layout_height="80dp">
 
         <ImageView
-            android:id="@+id/Fub_scroller_iv"
+            android:id="@+id/Fub_scroller1_iv"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
@@ -23,7 +22,7 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="50dp"
-            android:layout_toRightOf="@id/Fub_scroller_iv"
+            android:layout_toRightOf="@id/Fub_scroller1_iv"
             android:orientation="vertical">
 
             <RelativeLayout
