--- a/app/src/main/res/layout/pubfragment.xml
+++ b/app/src/main/res/layout/pubfragment.xml
@@ -93,10 +93,10 @@
 
                 </RelativeLayout>
 
-                <com.example.UIView.LimitScrollerView
+                <efan.com.money.UIView.LimitScrollerView
                     android:id="@+id/ScrollerView"
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="30sp"
                     android:fitsSystemWindows="true"
                     openxu:durationTime="1200"
@@ -110,7 +110,7 @@
                     android:layout_marginTop="20dp">
 
                     <ImageView
-                        android:id="@+id/Fub_jydt2_iv"
+                        android:id="@+id/Fub_jydt23_iv"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
                         android:layout_centerVertical="true"
@@ -123,7 +123,7 @@
                         android:layout_centerVertical="true"
                         android:layout_marginLeft="10dp"
                         android:layout_marginRight="50dp"
-                        android:layout_toRightOf="@id/Fub_jydt2_iv"
+                        android:layout_toRightOf="@id/Fub_jydt23_iv"
                         android:orientation="vertical">
 
                         <RelativeLayout
