--- a/app/src/main/res/layout/item_mai_jd_dd_qbrw.xml
+++ b/app/src/main/res/layout/item_mai_jd_dd_qbrw.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="#ffffff"
         android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="#f5f5f5"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -27,14 +32,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="订单日期:"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
 
                 <TextView
                     android:id="@+id/mai_1_dd_qbrw_item_time"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="2017-09-12"
-                    android:textSize="12sp" />
+                    android:textSize="12sp"/>
             </LinearLayout>
 
             <TextView
@@ -55,7 +60,7 @@
                 android:layout_alignParentBottom="true"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:background="#dbdbdb" />
+                android:background="#dbdbdb"/>
         </RelativeLayout>
 
         <RelativeLayout
@@ -69,7 +74,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="20dp"
-                android:background="@mipmap/ic_launcher" />
+                android:background="@mipmap/ic_launcher"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -91,7 +96,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:text="[微信]"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"/>
 
                     <TextView
                         android:id="@+id/mai_1_dd_qbrw_item_rwm"
@@ -103,7 +108,7 @@
                         android:ellipsize="end"
                         android:singleLine="true"
                         android:text="商品推销，朋友圈保留一天。"
-                        android:textSize="14sp" />
+                        android:textSize="14sp"/>
 
                 </RelativeLayout>
 
@@ -119,7 +124,7 @@
                         android:layout_centerVertical="true"
                         android:text="发单人："
                         android:textColor="#cccccc"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"/>
 
                     <TextView
                         android:id="@+id/mai_1_dd_qbrw_item_yhm"
@@ -130,7 +135,7 @@
                         android:layout_toRightOf="@id/dfk_lx"
                         android:text="扯淡"
                         android:textColor="#cccccc"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -145,7 +150,7 @@
                         android:layout_centerVertical="true"
                         android:text="状    态："
                         android:textColor="#cccccc"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"/>
 
                     <TextView
                         android:id="@+id/mai_1_dd_qbrw_item_zt"
@@ -156,7 +161,7 @@
                         android:layout_toRightOf="@id/dfk_fh"
                         android:text="已完成"
                         android:textColor="#00CD00"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"/>
                 </RelativeLayout>
             </LinearLayout>
         </RelativeLayout>
