--- a/app/src/main/res/layout/mefragment.xml
+++ b/app/src/main/res/layout/mefragment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -19,13 +19,13 @@
                 android:layout_height="120dp"
                 android:background="#63B8FF">
 
-                <ImageView
+                <efan.com.money.UIView.RoundImageView
                     android:id="@+id/main_head"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20dp"
-                    android:background="@mipmap/head" />
+                    android:background="@mipmap/head"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -35,15 +35,15 @@
                     android:layout_toRightOf="@id/main_head"
                     android:text="扯淡"
                     android:textColor="#ffffff"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"/>
 
                 <ImageView
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="15dp"
-                    android:layout_marginTop="5dp"
-                    android:background="@mipmap/user_bt_set" />
+                    android:layout_marginTop="15dp"
+                    android:background="@mipmap/user_bt_set"/>
             </RelativeLayout>
 
             <LinearLayout
@@ -64,7 +64,7 @@
                         android:layout_centerInParent="true"
                         android:text="接单"
                         android:textColor="#ffffff"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"/>
 
                     <ImageView
                         android:id="@+id/main_mj1_iv"
@@ -73,7 +73,7 @@
                         android:layout_alignParentBottom="true"
                         android:layout_centerHorizontal="true"
                         android:background="@mipmap/top"
-                        android:visibility="gone" />
+                        android:visibility="gone"/>
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -89,7 +89,7 @@
                         android:layout_centerInParent="true"
                         android:text="发单"
                         android:textColor="#ffffff"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"/>
 
                     <ImageView
                         android:id="@+id/main_mj2_iv"
@@ -98,14 +98,14 @@
                         android:layout_alignParentBottom="true"
                         android:layout_centerHorizontal="true"
                         android:background="@mipmap/top"
-                        android:visibility="gone" />
+                        android:visibility="gone"/>
                 </RelativeLayout>
             </LinearLayout>
 
             <FrameLayout
                 android:id="@+id/main_frame"
                 android:layout_width="match_parent"
-                android:layout_height="180dp" />
+                android:layout_height="180dp"/>
 
             <View
                 android:layout_width="match_parent"
@@ -123,7 +123,7 @@
                     android:layout_height="40dp"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20dp"
-                    android:background="@mipmap/user_bt_m_collect" />
+                    android:background="@mipmap/user_bt_m_collect"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -131,7 +131,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="70dp"
                     android:text="收藏"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"/>
 
                 <View
                     android:layout_width="match_parent"
@@ -152,7 +152,7 @@
                     android:layout_height="40dp"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20dp"
-                    android:background="@mipmap/user_bt_m_money" />
+                    android:background="@mipmap/user_bt_m_money"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -160,7 +160,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="70dp"
                     android:text="收入管理"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"/>
 
                 <View
                     android:layout_width="match_parent"
@@ -181,7 +181,7 @@
                     android:layout_height="40dp"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20dp"
-                    android:background="@mipmap/user_bt_m_test" />
+                    android:background="@mipmap/user_bt_m_test"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -189,7 +189,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="70dp"
                     android:text="安全中心"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"/>
 
                 <View
                     android:layout_width="match_parent"
@@ -210,7 +210,7 @@
                     android:layout_height="40dp"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20dp"
-                    android:background="@mipmap/user_bt_m_help" />
+                    android:background="@mipmap/user_bt_m_help"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -218,7 +218,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="70dp"
                     android:text="联系客服"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"/>
 
 
             </RelativeLayout>
