--- a/app/src/main/res/layout/item_mai_jd_dd_qbrw.xml
+++ b/app/src/main/res/layout/item_mai_jd_dd_qbrw.xml
@@ -5,6 +5,7 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/item_mai_jd_qqbrw"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="#ffffff"
