--- a/app/src/main/res/layout/item_mai_jd_dd_shz.xml
+++ b/app/src/main/res/layout/item_mai_jd_dd_shz.xml
@@ -5,6 +5,7 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/item_mai_jd_shz"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
