--- a/app/src/main/res/layout/item_mai_fd_dd_dsh.xml
+++ b/app/src/main/res/layout/item_mai_fd_dd_dsh.xml
@@ -5,6 +5,7 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/item_fd_dd_dsh_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffffff"
