--- a/app/src/main/res/layout/item_mai_fd_dd_jxs.xml
+++ b/app/src/main/res/layout/item_mai_fd_dd_jxs.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical">
 
     <LinearLayout
-        android:id="@+id/mai_jyz_ll"
+        android:id="@+id/item_fd_dd_jxs_ll"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="#ffffff"
