--- a/app/src/main/res/layout/item_mai_fd_dd_jycg.xml
+++ b/app/src/main/res/layout/item_mai_fd_dd_jycg.xml
@@ -5,6 +5,7 @@
               android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/item_fd_jycg_ll"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:background="#ffffff"
