--- a/app/src/main/res/layout/jd_tg_item.xml
+++ b/app/src/main/res/layout/jd_tg_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <RelativeLayout
+        android:id="@+id/jd_tg_item_rl"
         android:layout_width="match_parent"
         android:layout_height="50dp">
 
