--- a/app/src/main/res/layout/jd_tuiguang.xml
+++ b/app/src/main/res/layout/jd_tuiguang.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="#FFFFFF"
+              android:orientation="vertical">
 
 
     <RelativeLayout
@@ -27,21 +27,15 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="搜索推广类型"
-                android:textColor="#ffffff" />
+                android:textColor="#ffffff"/>
         </RelativeLayout>
 
     </RelativeLayout>
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/pub_tg_lv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:background="#ffffff"
-        android:divider="#ffffff"
-        android:dividerHeight="0dp">
-
-    </ListView>
+        android:layout_height="wrap_content"/>
 
 
 </LinearLayout>
