--- a/app/src/main/res/layout/jd_xiangxi.xml
+++ b/app/src/main/res/layout/jd_xiangxi.xml
@@ -100,6 +100,7 @@
                 android:textSize="20sp"/>
 
             <TextView
+                android:id="@+id/jd_xiangxi_zongshu"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
