--- a/app/src/main/res/layout/main_gv_item.xml
+++ b/app/src/main/res/layout/main_gv_item.xml
@@ -14,8 +14,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:background="@mipmap/main_tuiguang"/>
+            android:layout_marginTop="15dp"/>
 
         <TextView
             android:id="@+id/main_gv_item_tv"
@@ -23,7 +22,6 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:text="推广"
             android:textSize="16sp"/>
     </RelativeLayout>
 
