--- a/app/src/main/res/layout/mainfragment.xml
+++ b/app/src/main/res/layout/mainfragment.xml
@@ -24,15 +24,13 @@
                 android:focusable="true"
                 android:focusableInTouchMode="true"/>
 
-            <GridView
+            <android.support.v7.widget.RecyclerView
                 android:id="@+id/main_gridview"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:gravity="center"
-                android:numColumns="4">
+                android:gravity="center">
 
-            </GridView>
-
+            </android.support.v7.widget.RecyclerView>
 
             <View
                 android:layout_width="match_parent"
