--- a/app/src/main/res/layout/mefragment.xml
+++ b/app/src/main/res/layout/mefragment.xml
@@ -38,6 +38,7 @@
                     android:textSize="16sp"/>
 
                 <ImageView
+                    android:id="@+id/main_setting"
                     android:layout_width="25dp"
                     android:layout_height="25dp"
                     android:layout_alignParentRight="true"
