--- a/app/src/main/res/layout/mainfragment.xml
+++ b/app/src/main/res/layout/mainfragment.xml
@@ -28,9 +28,7 @@
                 android:id="@+id/main_gridview"
                 android:layout_width="match_parent"
                 android:layout_height="170dp"
-                android:gravity="center">
-
-            </android.support.v7.widget.RecyclerView>
+                android:gravity="center"/>
 
             <View
                 android:layout_width="match_parent"
