--- a/app/src/main/res/layout/pub_gv_item.xml
+++ b/app/src/main/res/layout/pub_gv_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent">
 
     <RelativeLayout
         android:id="@+id/pubfra_rl"
@@ -13,15 +13,13 @@
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:background="@mipmap/main_wx" />
+            android:layout_marginTop="15dp"/>
 
         <TextView
             android:id="@+id/pub_gv_item_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:text="微信群" />
+            android:layout_centerHorizontal="true"/>
     </RelativeLayout>
 </LinearLayout>
