--- a/app/src/main/res/layout/jd_xx_rw_fra.xml
+++ b/app/src/main/res/layout/jd_xx_rw_fra.xml
@@ -15,7 +15,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:text="所需社交："/>
+            android:text="所需社交："
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/jd_xx_rw_fra_sxsj"
@@ -24,7 +25,8 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/sxsj"
-            android:text="朋友圈"/>
+            android:text="朋友圈"
+            android:textSize="16sp"/>
 
     </RelativeLayout>
 
@@ -38,7 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:text="任务类型："/>
+            android:text="任务类型："
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/jd_xx_rw_fra_rwlx"
@@ -47,7 +50,8 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/rwlx"
-            android:text="集赞"/>
+            android:text="集赞"
+            android:textSize="16sp"/>
 
     </RelativeLayout>
 
@@ -61,7 +65,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:text="帐号要求："/>
+            android:text="帐号要求："
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -69,7 +74,8 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/zhyq"
-            android:text="无"/>
+            android:text="无"
+            android:textSize="16sp"/>
 
     </RelativeLayout>
 
@@ -83,7 +89,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="15dp"
-            android:text="上传截图："/>
+            android:text="上传截图："
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -91,7 +98,8 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/scjt"
-            android:text="是"/>
+            android:text="是"
+            android:textSize="16sp"/>
 
     </RelativeLayout>
 
@@ -105,7 +113,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
-            android:text="任务内容："/>
+            android:text="任务内容："
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/jd_xx_rw_fra_rwnr"
@@ -115,7 +124,8 @@
             android:layout_marginRight="30dp"
             android:layout_marginTop="15dp"
             android:layout_toRightOf="@id/rwnr"
-            android:text="加微信：遗忘，进朋友圈点赞，需截图。"/>
+            android:text="加微信：遗忘，进朋友圈点赞，需截图。"
+            android:textSize="16sp"/>
 
     </RelativeLayout>
 
@@ -129,7 +139,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="15dp"
             android:layout_marginTop="15dp"
-            android:text="任务备注："/>
+            android:text="任务备注："
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/jd_xx_rw_fra_rwbz"
@@ -139,7 +150,8 @@
             android:layout_marginRight="30dp"
             android:layout_marginTop="15dp"
             android:layout_toRightOf="@id/rwbz"
-            android:text="必须在朋友圈发布一天，3元每天。"/>
+            android:text="必须在朋友圈发布一天，3元每天。"
+            android:textSize="16sp"/>
 
     </RelativeLayout>
 </LinearLayout>
