--- a/app/src/main/res/drawable/dot_normal.xml
+++ b/app/src/main/res/drawable/dot_normal.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="100000dp"/>
-    <solid android:color="#000000"/>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
+    <corners android:radius="5dp" />
+    <solid android:color="#55000000" />
     <size
-        android:width="5dp"
-        android:height="5dp"/>
+        android:width="8dp"
+        android:height="8dp" />
 </shape>
