--- a/app/src/main/res/layout/jd_main.xml
+++ b/app/src/main/res/layout/jd_main.xml
@@ -42,10 +42,10 @@
             android:layout_weight="1">
 
             <TextView
+                android:id="@+id/jd_main_tuiguang"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="推广"/>
+                android:layout_centerInParent="true"/>
 
         </RelativeLayout>
 
@@ -64,10 +64,10 @@
             android:layout_weight="1">
 
             <TextView
+                android:id="@+id/jd_main_zhanghao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="筛选"/>
+                android:layout_centerInParent="true"/>
 
         </RelativeLayout>
 
