--- a/app/src/main/res/layout/mainfragment.xml
+++ b/app/src/main/res/layout/mainfragment.xml
@@ -17,12 +17,12 @@
             android:background="#ffffff"
             android:orientation="vertical">
 
-            <ImageView
+            <com.bigkoo.convenientbanner.ConvenientBanner
+                xmlns:app="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/convenientBanner"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
-                android:background="@mipmap/yingxiao"
-                android:focusable="true"
-                android:focusableInTouchMode="true"/>
+                app:canLoop="true"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/main_gridview"
